--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "Test",
+  "name": "Nomad",
   "version": "0.0.1",
-  "description": "Test",
+  "description": "roguelike",
   "dependencies": {
     "express": "^4.10.2",
     "node-uuid": "^1.4.3",
     "socket.io": "^1.3.5"
+  }
+  "scripts": {
+    "start": "index.js"
   }
 }
