--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "socket.io": "^1.3.5"
   },
   "scripts": {
-    "start": "index.js"
+    "start": "node src/index.js",
+    "build": "webpack" // This command will automatically run on deployment
   }
 }
