--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "socket.io": "^1.3.5"
   },
   "scripts": {
-    "start": "node src/index.js",
-    "build": "webpack"
+    "start": "node src/index.js"
   }
 }
