--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "Nomad",
+  "name": "nomad",
   "version": "0.0.1",
   "description": "roguelike",
   "dependencies": {
     "express": "^4.10.2",
     "node-uuid": "^1.4.3",
     "socket.io": "^1.3.5"
-  },
-  "scripts": {
-    "start": "index.js"
   }
 }
